<resources>
    <string name="app_name">Spin And Learn</string>
    <string name="capture_image">Take a picture</string>
    <string name="import_image">Import image from gallery</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="enter">Enter!</string>
    <string name="exit">Exit</string>
    <string name="your_answer_here">Your answer...</string>
    <string name="answer">Answer</string>
    <string name="round">Round:</string>
    <string name="score">Score:</string>
    <string name="choose_level">please choose level:</string>
    <string name="hey">Hey</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="level">Level:</string>
    <string name="spin">Spin!</string>
    <string name="how_to_play">How to play</string>
    <string name="leaderbaord">Leaderboard</string>
    <string name="champions">Who are the champions?</string>
    <string name="israel">Israel</string>
    <string name="jerusalem">Jerusalem</string>
    <string name="spain">Spain</string>
    <string name="madrid">Madrid</string>
    <string name="england">England</string>
    <string name="london">London</string>
    <string name="usa">United States of America</string>
    <string name="washington">Washington D.C.</string>
    <string name="france">France</string>
    <string name="paris">Paris</string>
    <string name="russsia">Russia</string>
    <string name="moscow">Moscow</string>
    <string name="ukraine">Ukraine</string>
    <string name="kiev">Kiev</string>
    <string name="japan">Japan</string>
    <string name="tokyo">Tokyo</string>
    <string name="south_africa">South Africa</string>
    <string name="capetown">Capetown</string>
    <string name="germany">Germany</string>
    <string name="berlin">Berlin</string>
    <string name="argentina">Argentina</string>
    <string name="buenos_aires">Buenos Aires</string>
    <string name="peru">Peru</string>
    <string name="lima">Lima</string>
    <string name="egypt">Egypt</string>
    <string name="cairo">Cairo</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="riahd">Riahd</string>
    <string name="lebanon">Lebanon</string>
    <string name="beiruth">Beiruth</string>
    <string name="siriya">Syria</string>
    <string name="damascus">Damascus</string>
    <string name="encyclopedia">ENCYCLOPEDIA</string>
    <string name="encyclopedia_missing">En_ycl_pe_i_</string>
    <string name="bacteria">BACTERIA</string>
    <string name="bacteria_missing">_a_te_ia</string>
    <string name="allergy">ALLERGY</string>
    <string name="allergy_missing">A_le_g_</string>
    <string name="ballerina">BALLERINA</string>
    <string name="ballerina_missing">Ba_le_i_a</string>
    <string name="boomernag">BOOMERANG</string>
    <string name="boomerang_missing">Bo_me_an_</string>
    <string name="camouflage">CAMOUFLAGE</string>
    <string name="camouflage_missing">_amo_f_ag_</string>
    <string name="magazine">MAGAZINE</string>
    <string name="magazine_missing">Ma_a_i_e</string>
    <string name="archive">ARCHIVE</string>
    <string name="archive_missing">A_c_iv_</string>
    <string name="feather">FEATHER</string>
    <string name="feather_missing">F_a_he_</string>
    <string name="success">SUCCESS</string>
    <string name="success_missing">_u_ce_s</string>
    <string name="encylopedia_definition">A book or set of books giving information on many subjects or on many aspects of one subject and typically arranged alphabetically</string>
    <string name="bacteria_definition">Tiny life form seen only in a microscope</string>
    <string name="allergy_definition">A damaging immune response by the body to a substance, especially a particular food, pollen, fur, or dust, to which it has become hypersensitive</string>
    <string name="ballerina_definition">A female ballet dancer</string>
    <string name="boomernag_definition">A curved flat piece of wood that can be thrown so that it will return to the thrower, traditionally used by Australian Aborigines as a hunting weapon</string>
    <string name="camouflage_definition">The disguising of military personnel, equipment, and installations by painting or covering them to make them blend in with their surroundings</string>
    <string name="magazine_definition">A container or detachable receptacle for holding a supply of cartridges to be fed automatically to the breech of a gun</string>
    <string name="archive_definition">A collection of historical documents or records providing information about a place, institution, or group of people</string>
    <string name="feather_definition">Any of the flat appendages growing from a bird\'s skin and forming its plumage, consisting of a partly hollow horny shaft fringed with vanes of barbs</string>
    <string name="success_definition">The accomplishment of an aim or purpose</string>
    <string name="tooteth">Tooteth</string>
    <string name="smoke">Smoke</string>
    <string name="sentence2">"No smoke without fire "</string>
    <string name="book">Book</string>
    <string name="sentence3">"Don't judge a book by its cover. "</string>
    <string name="thousand">Thousand</string>
    <string name="sentence4">"Let the buyer have a thousand eyes for the seller wants only one. "</string>
    <string name="hand">Hand</string>
    <string name="sentence5">"Better is one bird in the hand than two in the bush. "</string>
    <string name="practice">Practice</string>
    <string name="sentence6">"You've got to practice what you preach "</string>
    <string name="loves">Loves</string>
    <string name="sentence7">"Misery loves company. "</string>
    <string name="sight">Sight</string>
    <string name="sentence8">"out of sight - out of mind "</string>
    <string name="grasp">Grasp</string>
    <string name="sentence9">"Grasp all, lose all. "</string>
    <string name="capital_of">Capital of</string>
    <string name="rnd_letter_index">A</string>
    <string name="leave">Leave</string>
    <string name="del">DEL</string>
    <string name="clr">CLR</string>
    <string name="math1">32 + 17</string>
    <string name="math2">67 - 52</string>
    <string name="math3">12 x 5</string>
    <string name="math4">72 / 9</string>
    <string name="math5">23 x 3</string>
    <string name="math6">128 / 32</string>
    <string name="math7">59 + 62</string>
    <string name="math8">236 - 140</string>
    <string name="math9">2 ^ 5</string>
    <string name="math10">5 ^ 3</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="skip_tutorial">Skip this tutorial?</string>
    <string name="quit">Are you sure you want to quit?</string>
    <string name="stop_game">Are you sure you want to end current game?\nYour score will not be saved!</string>
    <string name="change_player">Change Player</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="reset_photo">Reset Photo</string>
    <string name="vietnam">Vietnam</string>
    <string name="turkey">Turkey</string>
    <string name="switzerland">Switzerland</string>
    <string name="sudan">Sudan</string>
    <string name="romania">Romania</string>
    <string name="netherlands">Netherlands</string>
    <string name="morocco">Morocco</string>
    <string name="korea">Korea</string>
    <string name="jordan">Jordan</string>
    <string name="italy">Italy</string>
    <string name="iraq">Iraq</string>
    <string name="iran">Iran</string>
    <string name="india">India</string>
    <string name="hungary">Hungary</string>
    <string name="greece">Greece</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="cyprus">Cyprus</string>
    <string name="croatia">Croatia</string>
    <string name="canada">Canada</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="brazil">Brazil</string>
    <string name="belgium">Belgium</string>
    <string name="austria">Austria</string>
    <string name="australia">Australia</string>
    <string name="hanoi">Hanoi</string>
    <string name="ankara">Ankara</string>
    <string name="bern">Bern</string>
    <string name="khartoum">Khartoum</string>
    <string name="bucharest">Bucharest</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="rabat">Rabat</string>
    <string name="seoul">Seoul</string>
    <string name="amman">Amman</string>
    <string name="rome">Rome</string>
    <string name="baghdad">Baghdad</string>
    <string name="tehran">Tehran</string>
    <string name="new_delhi">New Delhi</string>
    <string name="budapest">Budapest</string>
    <string name="athens">Athens</string>
    <string name="addis_ababa">Addis Ababa</string>
    <string name="nicosia">Nicosia</string>
    <string name="zagreb">Zagreb</string>
    <string name="ottawa">Ottawa</string>
    <string name="sofia">Sofia</string>
    <string name="brasilia">Brasilia</string>
    <string name="vienna">Vienna</string>
    <string name="canberra">Canberra</string>
    <string name="brussels">Brussels</string>
    <string name="math11">6 x 4</string>
    <string name="math12">4 x 3</string>
    <string name="math13">81 / 9</string>
    <string name="math14">64 / 8</string>
    <string name="math15">2 ^ 3</string>
    <string name="math16">2 ^ 10</string>
    <string name="math17">2 ^ 8</string>
    <string name="math18">512 / 2</string>
    <string name="math19">128 / 2</string>
    <string name="math20">12 x 12</string>
    <string name="math21">7 x 7</string>
    <string name="math22">17 x 3</string>
    <string name="math23">84 / 4</string>
    <string name="math24">137 - 73</string>
    <string name="math25">85 + 48</string>
    <string name="math26">123 + 253</string>
    <string name="math27">452 - 451</string>
    <string name="math28">317 x 2</string>
    <string name="math29">144 / 3</string>
    <string name="math30">12 + 18</string>
    <string name="math31">45 + 10</string>
    <string name="math32">11 x 9</string>
    <string name="math33">100 / 4</string>
    <string name="math34">17 + 22</string>
    <string name="math35">300 / 3</string>
    <string name="math36">6 x 6</string>
    <string name="math37">20 x 7</string>
    <string name="math38">8 x 7</string>
    <string name="math39">18 + 5</string>
    <string name="math40">42 / 7</string>
    <string name="panic">PANIC</string>
    <string name="spoiler">SPOILER</string>
    <string name="popular">POPULAR</string>
    <string name="modernization">MODERNIZATION</string>
    <string name="confetti">CONFETTI</string>
    <string name="newsletter">NEWSLETTER</string>
    <string name="handyman">HANDYMAN</string>
    <string name="muffins">MUFFINS</string>
    <string name="strudel">STRUDEL</string>
    <string name="meditation">MEDITAITON</string>
    <string name="collection">COLLECTION</string>
    <string name="tweezers">TWEEZERS</string>
    <string name="scissors">SCISSORS</string>
    <string name="sticklight">STICKLIGHT</string>
    <string name="kaleidoscope">KALEIDOSCOPE</string>
    <string name="panic_definition">Sudden uncontrollable fear or anxiety, oftencausing wildly unthinking behaviour</string>
    <string name="spoiler_definition">A person or thing that ruins something</string>
    <string name="popular_definition">Liked or admired by many people or by a particular person or group</string>
    <string name="modernization_definition">The process of adapting something to modern needs or habits</string>
    <string name="confetti_definition">Small pieces of coloured paper traditionally thrown over a person who is celebrating</string>
    <string name="newsletter_definition">A bulletin issued periodically to the members of a society or other organization</string>
</resources>