<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_game"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="40sp"
        />


    <LinearLayout android:id="@+id/bonusLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >

        <Button android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:layout_centerInParent="true"
            android:padding="20dp"/>

        <Button android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_centerInParent="true"
            android:padding="20dp"
            />

    </LinearLayout>



</RelativeLayout>