<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelActivity">

    <TextView
        android:id="@+id/massage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/massage"
        android:layout_centerHorizontal="true">

    <Button android:id="@+id/easyBtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/button_design"
        android:text="@string/easy"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>

    <Button android:id="@+id/mediumBtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/button_design"
        android:text="@string/medium"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>

    <Button android:id="@+id/hardBtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/button_design"
        android:text="@string/hard"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>

    </LinearLayout>

</RelativeLayout>