<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_tutorial"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="#000"
        android:layout_margin="20dp"
        android:fontFamily="@font/stephia"/>

    <LinearLayout android:id="@+id/bonusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:layout_marginHorizontal="20dp">

        <Button android:id="@+id/ok"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:layout_margin="15dp"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:fontFamily="@font/stephia"/>

        <Button android:id="@+id/cancle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_margin="15dp"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:fontFamily="@font/stephia"/>

    </LinearLayout>

</RelativeLayout>