<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2f6df"
    tools:context=".FirstActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_design"
        android:layout_marginTop="-40dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            app:civ_border_color="#000"
            android:src="@drawable/camera"/>

        <EditText android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:inputType="text"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/enter_your_name"
            android:textColorHint="@color/hintColor"
            android:textColor="#000"
            android:background="@drawable/edit_texts_design"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button android:id="@+id/enter"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:layout_margin="15dp"
                android:background="@drawable/button_design"/>

            <Button android:id="@+id/exit"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:layout_margin="15dp"
                android:background="@drawable/button_design"/>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>