<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView android:id="@+id/timeMath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textColor="#000"
            android:gravity="center"/>

        <TextView android:id="@+id/exerciseMath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textColor="#000"
            android:gravity="center"
            android:background="@drawable/question_design"/>

        <TextView android:id="@+id/answerMath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textColor="#000"
            android:gravity="center"
            android:background="@drawable/question_design"/>

        <TableLayout
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center">

            <TableRow>
                <TextView android:id="@+id/tv_m7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="7"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="8"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m9"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="9"
                    android:background="@drawable/complete_the_latters_design"/>
            </TableRow>

            <TableRow>
                <TextView android:id="@+id/tv_m4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="4"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="5"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="6"
                    android:background="@drawable/complete_the_latters_design"/>
            </TableRow>

            <TableRow>
                <TextView android:id="@+id/tv_m1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="1"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="2"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="3"
                    android:background="@drawable/complete_the_latters_design"/>
            </TableRow>

            <TableRow>
                <TextView android:id="@+id/tv_mClear"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/clr"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_m0"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="0"
                    android:background="@drawable/complete_the_latters_design"/>
                <TextView android:id="@+id/tv_mBack"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/del"
                    android:background="@drawable/complete_the_latters_design"/>
            </TableRow>

        </TableLayout>

        <Button android:id="@+id/mathAnswerBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/answer"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_margin="15dp"
            android:background="@drawable/button_design"/>

    </LinearLayout>

</RelativeLayout>


    <!--<RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <RadioButton android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="#000"
                    android:layout_margin="5dp"/>

                <RadioButton android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="#000"
                    android:layout_margin="5dp"/>

                <RadioButton android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="#000"
                    android:layout_margin="5dp"/>

                <RadioButton android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="#000"
                    android:layout_margin="5dp"/>

            </RadioGroup>

            <Button android:id="@+id/mathAnswerBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/answer"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:layout_margin="15dp"
                android:background="@drawable/button_design"/>-->